08/24/20
  - Fixed typo in lgx_device.py

07/15/20
  - Check connection sooner when reading lists
  - Updated README

07/14/20
  - Use muti service object to learn data types
  - Handle single leftover tag when getting multiple data types

07/13/20
  - Fixed when single tag is left over in batch read

07/09/20
  - Fixes for Micro800 strings

07/08/20
  - Fixed read issues after reorganization
  - Upped version to 0.6.11
  - Cleanup leftovers

07/07/20
  - Reorganized read and parsing replies
  - DWORD had incorrect pack/unpack format
  - Fixed getwrordcount returning a float under python3

05/13/20
  - Force little endian to support pylogix import in jython as Java uses big-endian. Issue #132 

05/13/20
  - Fixed PylogixTests.py imports

05/11/20
  - Default to LargeForwardOpen, fall back on ForwardOpen
  - Restructured some code, cleanup

05/05/20
  - Moved templates to .github hidden folder

05/04/20
  - Fix raw return for GetPLCTime
  - Fix printed return for example 21
  
04/23/20
  - jprogin's enhancements (read large lists, save UDT)
  - Fixes for making too many requests for templates already known
  - Upped version

4/01/20
  - Added Docs folder
  - Added Templates for Issues and Pull requests
  - Added Guides
  - Added UnitTesting doc
  - Upped version to 0.6.6
  - Updated README to reflect pypi install

03/29/20
  - Fixed routing to Micro800 controllers
  - Fixed GetDeviceProperties for Micro800
  - Fixed ForwardClose
  - Randomize TOConnectionID
  - Upped version to 0.6.5

03/24/20
  - Added the ability to route packets through a CLX rack, upped to 0.6.4

03/20/20
  - Impoved lost connections and error handling, upped version to 0.6.3

02/28/20
  - Fixed typo in lgxDevice.py
  - Upped to version 0.6.2

02/19/20
  - Changed connection to properly allow unconnected send for getting module properties
  - Added GetDeviceProperties to get properties of a device at the specified address
  - Added str() and repr() methods to LgxTag and LGXDevice